# x3_fun

./: .gitignore  CMakeLists.txt  conanfile.txt
fun/: config.hpp  error_handler.hpp
src/: expression.cpp  interpreter.cpp  printer.cpp
test/: eval_expression_test.cpp
